--- a/music/mopidy.org
+++ b/music/mopidy.org
@@ -6,7 +6,7 @@
 #+PROPERTY: header-args+ :noweb tangle
 #+OPTIONS: prop:t
 /An extensible music server written in Python/
-#+INCLUDE: "../secrets.org"
+#+INCLUDE: "../variables.org"
 * Audio
   Following setting is needed in order to use =ncmpcpp=:
   #+BEGIN_SRC conf
