--- a/system/scripts.org
+++ b/system/scripts.org
@@ -3,6 +3,96 @@
 #+OPTIONS: prop:t
 /Here are defined personal scripts./
 #+INCLUDE: "../variables.org"
+* Dotfiles tangling
+  :PROPERTIES:
+  :header-args: :tangle ~/bin/dot-tangle :comments both :shebang "#!/bin/env bash" :mkdirp yes :noweb tangle
+  :END:
+  Following script installs and tangles literate dotfiles written in Org mode.
+
+  Directory which contains dotfiles:
+  #+BEGIN_SRC sh
+  DOTFILES_HOME=$HOME/.dotfiles
+  #+END_SRC
+
+  Following function Exports Org file to another Org file.
+  Exporting is needed because =#+INCLUDE= isn't executed during tangling.
+  #+BEGIN_SRC sh
+  emacs_export_to_org() {
+      emacs -Q --batch --eval "
+          (dolist (file command-line-args-left)
+            (with-current-buffer
+              (find-file-noselect file)
+               (org-org-export-to-org)
+            )
+          )
+        )" $1
+  }
+  #+END_SRC
+
+  Following function tangles all specified Org files
+  and decrypts entries encrypted by =org-crypt=.
+  #+BEGIN_SRC sh
+  emacs_tangle() {
+      emacs -Q --batch --eval "
+        (progn
+          (require 'org-crypt)
+          (require 'epa-file)
+          (epa-file-enable)
+          (setq org-crypt-key \"<<crypt_key>>\")
+          (setf epa-pinentry-mode 'ask)
+          (dolist (file command-line-args-left)
+            (with-current-buffer
+              (find-file-noselect file)
+              (org-decrypt-entries)
+              (org-babel-tangle)
+            )
+          )
+        )" $1
+  }
+  #+END_SRC
+
+  Export all Org files matching passed arguments except the files in the root directory:
+  #+BEGIN_SRC sh
+  FILES=$(find "$DOTFILES_HOME/$*" -path "$DOTFILES_HOME/[!.]*/*.org")
+  emacs_export_to_org "$FILES"
+  #+END_SRC
+
+  Tangle exported files.
+  #+BEGIN_SRC sh
+  EXPORTED_FILES=$(echo "$FILES" | sed 's/$/.org/')
+  emacs_tangle "$EXPORTED_FILES"
+  #+END_SRC
+
+  Delete exported files.
+  #+BEGIN_SRC sh
+  rm $EXPORTED_FILES
+
+  exit 0
+  #+END_SRC
+* System configuration
+  :PROPERTIES:
+  :header-args: :tangle ~/bin/dot-config :comments both :shebang "#!/bin/env bash" :mkdirp yes :noweb tangle
+  :END:
+  Setups system after new installation.
+
+  Configure MIME types and corresponding handlers using [[file:../system/mimeo.org][mimeo]].
+  #+BEGIN_SRC sh
+  mimeo --create emacs.desktop Emacs 'emacsclient -c -a emacs %F' 'glob:text/*' 'noterm'
+  mimeo --prefer 'glob:text/*' emacs.desktop
+  mimeo --create mpv.desktop mpv 'mpv %F' 'glob:video/*' 'noterm'
+  mimeo --prefer 'glob:video/*' mpv.desktop
+  mimeo --prefer 'glob:Video/*' mpv.desktop
+  mimeo --create firefox.desktop Firefox 'firefox %U' 'glob:x-scheme-handler/*' 'noterm'
+  mimeo --prefer 'glob:x-scheme-handler/*' firefox.desktop
+  mimeo --create imv.desktop imv 'imv %F' 'glob:image/*' 'noterm'
+  mimeo --prefer 'glob:image/*' imv.desktop
+  mimeo --create zathura.desktop zathura 'zathura %F' 'application/pdf' 'noterm'
+  mimeo --prefer 'application/pdf' zathura.desktop
+  mimeo --create zathura.desktop zathura 'zathura %F' 'application/pdf' 'noterm'
+  mimeo --prefer 'application/pdf' zathura.desktop
+  mimeo --create audacity.desktop Audacity 'audacity %F' 'glob:audio/*' 'noterm'
+  mimeo --prefer 'glob:audio/*' audacity.desktop
+  #+END_SRC
 * Orgcal
   :PROPERTIES:
   :header-args: :tangle ~/bin/orgcal :comments both :shebang "#!/bin/env bash" :mkdirp yes :noweb tangle
