--- a/editor/emacs.org
+++ b/editor/emacs.org
@@ -7,6 +7,7 @@
 #+OPTIONS: prop:t
 /The extensible, customizable, self-documenting real-time display editor/
 #+INCLUDE: "../variables.org"
+#+INCLUDE: "../secrets.org"
 * General
   Hide toolbars.
   #+BEGIN_SRC elisp
