--- a/music/mopidy.org
+++ b/music/mopidy.org
@@ -7,6 +7,7 @@
 #+OPTIONS: prop:t
 /An extensible music server written in Python/
 #+INCLUDE: "../variables.org"
+#+INCLUDE: "../secrets.org"
 * Audio
   Following setting is needed in order to use =ncmpcpp=:
   #+BEGIN_SRC conf
