Hide Git credentials

--- a/secrets.org
+++ b/secrets.org
@@ -31,20 +31,22 @@ jr/gLhpwpq5uziiD0nv4bLOMPhMm/qW5kZ6K79tB5/LUzGc46Na7
   :END:
 -----BEGIN PGP MESSAGE-----
 
-hQIMAzw/GyStS24+AQ/7BH6V7Pq3EMzDqZp/yhc1E3tXSz5hGeWiLXpnyKw8sLw0
-77itbHql8xn9Ho6F1b3NBjZBaFrFemaToxUmt9fPCXvwQxUcp5Th1WykE6S/pu4f
-X9tT2aKSeybM1rGWo+ZbqhzEN7QH+kQIyyFgwOtl+xF2xCcvdwURSbnONXf0EOXL
-miqIy3gOB1kf02Y0hsGuR4j5+drLlt5M0zPWX5EFtvRQyUK97xTROFbSSh3j9dUP
-OSKUmr94aRpgSX3LoeRbV5NP3A1GJ84sCHwxH5kGl9HcDSrjoHmoV+G8qcCVE7v9
-Z1mTb1oR0VAsidtPpx5RiRuN6H7UfTASwgrGnBVmbryGiLon+U1ZnjDZGrQ1HftQ
-6w7/WgAewEURHI27t78CXPbRu5zwrb2H6LXfefF9jw1q+Qzm0O7KfJLCKTLixvC4
-VN1JV9Ausxy+5ez77yTOBRQ9j/0hwdPyYLYKmrnpTPh8eQQMZlVn54qrGxZ2SQju
-NMeUuvCgfymtiDFPoIaRuLJ2sunC1vdbv5S4qmo25SELjyfoH2CW2/RN3Fi35hVZ
-lFeDiFDjE/lU+zRZIH0DwpYkuOhelIOMluG+5wk5CXh6Oj0mw4AR5GbkOJMYpwi4
-z0K9PXcQgJ/N9v5Vj+fYDV4Q6cA+UHO0MWqi2r4o0+c7HwRIx56XN/czVJhzeErS
-tgFW47i1f8p1ymhat4q+eMPc28sPRrgFMFOC7PdqdMhp2ZWpqFVSL9PvTmrvgx+C
-ZoDpC1+JlJUqCqwSjEFjAhbDHmKPYaTyuz2c05FIM/noM1IBLxm4GZFYqxlJDDHw
-I5C2Jzc2S+LnEkQl65JmhWV18zlPczLq3KKzdptGi9vZpPtN/NdVzZ5DhoxfymCc
-HOgXZaOzrgb0tkIBHbzVwrW9ZsLVTrB58I2SoBcP0+mGcg98UUti
-=j3oO
+hQIMAzw/GyStS24+AQ//Q87o5hlP484NYMB0IzRgyQYW3VgmwzfxUxBOC4kqlVqO
+D22QEE/kBYwLOc948JYOnEJ448H76hWaXfyx2He8i8aO4pUHWSdj+bNjSo4Dbs7/
+12+hYfgXv+lIcJ34tiTfuQK15/Qwb71GralAgQPw7HMlv7YY3kXKVyWrU741AFOs
+KR2va9GOrNmZ2gArfmKKWpRK+q5oLdk/GqcEJ4BqV/4nTyhwXd9ls6913zsQ/CyQ
+umGHKEGMZocL9v0PhTat8mZIM5pYIGd5oU99CwkRPTwRsnD02p5KXcZRTYTWt+GC
+jsXm8FcB+s95MVfSswGXN61tDpP8Y97Pl6W7dX+tMljs6DCpyguFN2QlgyfCOdxT
+FUlzx9uWscdf+9tU7sVshQzlkpYvjn8vaf2GUZhzkDIjKyxf+Jc+ed0wwXi77dXy
+7Am0rjqAHcT3TrqEM5uAP5McKA9ezvXv1NSgRAlNl9gKxdX9xljE4rQrQdsZ7tK9
+OWOOLta/kRcTNoKlqsqjtteA1CUabP639Vibxz8utbATJMftQ5nTVHhlejRNmSoA
+xyQ4lEim0fgtcZiAG80YfXO8XczF41EIRaHCREmY4Bejb0S1zJR+cOW3eduj8ZHy
+Iu9hTSN5/c4jgl3t1yjuLYmY465mN9I+Ek3+cf/voVnWpp0HoIYfFNeBrcH1QsnS
+wDQBxtaaeBqBbnuN+X7fMAxheLjRkpQ69B8xej0O00vAyYUwJ1NLTMhVVShRi/BB
+ioT+eOpZCVb2u+tTnclfI2p5Vjrnc0HxipDDcAp0sOhPWoXt+yKrcMX5OiZ9aQSj
+4hSP4IK07y6tSirR50bnsjGmZkdrp3Nx20IiVF2RtV/dU+bUq8P3RWTPXbFUxgac
+uRaiY08e2Iq6nj70mDTC/jeprwhdq73OQx598gQl9wGHDezM+A57grWlgqstv0fJ
+kWHMOeeIWgKFttzCYkgBvN1NRvhvOTOMmOuCWku5gGQwJrpCwDqbSNwh0xFKi3Sz
+w7w6Pjkn
+=Cimt
 -----END PGP MESSAGE-----
