--- a/web/firefox.org
+++ b/web/firefox.org
@@ -259,235 +259,246 @@
    }
    #+END_SRC
 * Styles
-  :PROPERTIES:
-  :header-args: :tangle ~/.mozilla/firefox/default/chrome/userChrome.css :comments both :mkdirp yes :noweb tangle
-  :END:
-  Declaring color variables
-  #+BEGIN_SRC css
-  :root {
-      --bar-color: <<base01>>;
-      --bar-text-color: <<base06>>;
-      --tab-color: <<base02>>;
-      --tab-text-color: <<base05>>;
-      --tab-selected-color: <<base0D>>;
-      --tab-selected-text-color: <<base00>>;
-  }
-  #+END_SRC
+** User interface
+   :PROPERTIES:
+   :header-args: :tangle ~/.mozilla/firefox/default/chrome/userChrome.css :comments both :mkdirp yes :noweb tangle
+   :END:
+   Declaring color variables
+   #+BEGIN_SRC css
+   :root {
+       --bar-color: <<base01>>;
+       --bar-text-color: <<base06>>;
+       --tab-color: <<base02>>;
+       --tab-text-color: <<base05>>;
+       --tab-selected-color: <<base0D>>;
+       --tab-selected-text-color: <<base00>>;
+   }
+   #+END_SRC
 
-  hiding useless stuffs
-  #+BEGIN_SRC css
-  .titlebar-placeholder,#wrapper-alltabs-button,.tab-close-button,.tab-icon-image,#main-window :-moz-any(#back-button, #forward-button) {
-      display: none;
-  }
-  #identity-box,.urlbar-history-dropmarker,#pageActionButton {
-      display: none !important
-  }
-  .tab-throbber{
-      margin: 0!important;
-      padding: 0!important;
-  }
-  #tabbrowser-tabs .tabs-newtab-button {
-      visibility: collapse !important;
-  }
-  #+END_SRC
+   hiding useless stuffs
+   #+BEGIN_SRC css
+   .titlebar-placeholder,#wrapper-alltabs-button,.tab-close-button,.tab-icon-image,#main-window :-moz-any(#back-button, #forward-button) {
+       display: none;
+   }
+   #identity-box,.urlbar-history-dropmarker,#pageActionButton {
+       display: none !important
+   }
+   .tab-throbber{
+       margin: 0!important;
+       padding: 0!important;
+   }
+   #tabbrowser-tabs .tabs-newtab-button {
+       visibility: collapse !important;
+   }
+   #+END_SRC
 
-  urlbar selection color
-  #+BEGIN_SRC css
-  ::-moz-selection {background-color: var(--tab-selected-color) !important;}
-  #+END_SRC
+   urlbar selection color
+   #+BEGIN_SRC css
+   ::-moz-selection {background-color: var(--tab-selected-color) !important;}
+   #+END_SRC
 
-  hides a ugly black bottom background under each unfocused tab
-  #+BEGIN_SRC css
-  #navigator-toolbox{
-      --tabs-border-color: none !important;
-  }
-  #+END_SRC
+   hides a ugly black bottom background under each unfocused tab
+   #+BEGIN_SRC css
+   #navigator-toolbox{
+       --tabs-border-color: none !important;
+   }
+   #+END_SRC
 
-  show tab numbers
-  #+BEGIN_SRC css
-  tabs {
-    counter-reset: tab-counter;
-  }
+   show tab numbers
+   #+BEGIN_SRC css
+   tabs {
+     counter-reset: tab-counter;
+   }
 
-  .tab-label::before {
-    counter-increment: tab-counter;
-    content: counter(tab-counter) ": ";
-  }
-  #+END_SRC
+   .tab-label::before {
+     counter-increment: tab-counter;
+     content: counter(tab-counter) ": ";
+   }
+   #+END_SRC
 
 
-  tab occupy all space
-  tab title font is reduced
-  #+BEGIN_SRC css
-  .tabbrowser-tab[fadein]:not([pinned]) {
-      max-width: 100% !important;
-      font-size: 0.9em !important;
-  }
-  #+END_SRC
+   tab occupy all space
+   tab title font is reduced
+   #+BEGIN_SRC css
+   .tabbrowser-tab[fadein]:not([pinned]) {
+       max-width: 100% !important;
+       font-size: 0.9em !important;
+   }
+   #+END_SRC
 
-  url bar font size is reduced
-  no borders
-  no shadow
-  no round edges
-  #+BEGIN_SRC css
-  #urlbar {
-    font-size: 0.8em !important;
-    border: none !important;
-    box-shadow: none !important;
-    --toolbarbutton-border-radius: 0px !important;
-    color: var(--bar-color) !important;
-    text-align: center !important;
-  }
-  #+END_SRC
+   url bar font size is reduced
+   no borders
+   no shadow
+   no round edges
+   #+BEGIN_SRC css
+   #urlbar {
+     font-size: 0.8em !important;
+     border: none !important;
+     box-shadow: none !important;
+     --toolbarbutton-border-radius: 0px !important;
+     color: var(--bar-color) !important;
+     text-align: center !important;
+   }
+   #+END_SRC
 
-  i don't really know what this do but removing it gives a weired behaviour when opening and closing tabs any analysis are welcome ^^
-  #+BEGIN_SRC css
-  .tabbrowser-tab::after, .tabbrowser-tab::before {
-     border:none !important;
-  }
-  #+END_SRC
+   i don't really know what this do but removing it gives a weired behaviour when opening and closing tabs any analysis are welcome ^^
+   #+BEGIN_SRC css
+   .tabbrowser-tab::after, .tabbrowser-tab::before {
+      border:none !important;
+   }
+   #+END_SRC
 
-  center tab text title
-  #+BEGIN_SRC css
-  .tab-label {
-      -moz-box-flex: 1 !important;
-      text-align: center !important;
-      color : var(--tab-selected-text-color);
-  }
-  #+END_SRC
+   center tab text title
+   #+BEGIN_SRC css
+   .tab-label {
+       -moz-box-flex: 1 !important;
+       text-align: center !important;
+       color : var(--tab-selected-text-color);
+   }
+   #+END_SRC
 
-  here is a serie of color background
-  #+BEGIN_SRC css
-  .tab-line{
-      /*background-color: var(--bar-color) !important;
-      height: 1px !important;*/
-      visibility: collapse !important;
-  }
+   here is a serie of color background
+   #+BEGIN_SRC css
+   .tab-line{
+       /*background-color: var(--bar-color) !important;
+       height: 1px !important;*/
+       visibility: collapse !important;
+   }
 
-  .tab-background {
-      border: none !important;
-      background-attachment: none!important;
-      background-color: var(--tab-selected-color) !important;
-      background-image: none!important;
-  }
+   .tab-background {
+       border: none !important;
+       background-attachment: none!important;
+       background-color: var(--tab-selected-color) !important;
+       background-image: none!important;
+   }
 
-  .tabbrowser-tab:not([selected]) .tab-background {
-      border: none !important;
-      background-color: var(--tab-color) !important;
-  }
-  .tabbrowser-tab:not([selected]) .tab-label {
-      color : var(--tab-text-color);
-  }
+   .tabbrowser-tab:not([selected]) .tab-background {
+       border: none !important;
+       background-color: var(--tab-color) !important;
+   }
+   .tabbrowser-tab:not([selected]) .tab-label {
+       color : var(--tab-text-color);
+   }
 
-  #urlbar-background{
-      background-color: var(--tab-text-color) !important;
-  }
+   #urlbar-background{
+       background-color: var(--tab-text-color) !important;
+   }
 
-  #nav-bar,#urlbar-container,#urlbar,#PanelUI-menu-button{
-      background-color: var(--bar-color) !important;
-  }
-  #navigator-toolbox toolbarbutton {
-      fill: var(--bar-text-color) !important;
-  }
-  #+END_SRC
+   #nav-bar,#urlbar-container,#urlbar,#PanelUI-menu-button{
+       background-color: var(--bar-color) !important;
+   }
+   #navigator-toolbox toolbarbutton {
+       fill: var(--bar-text-color) !important;
+   }
+   #+END_SRC
 
-  hides another ugly black bottom background under the urlbar container
-  #+BEGIN_SRC css
-  :root:-moz-lwtheme-brighttext {
-      --toolbox-border-bottom-color: none !important;
-  }
-  #+END_SRC
+   hides another ugly black bottom background under the urlbar container
+   #+BEGIN_SRC css
+   :root:-moz-lwtheme-brighttext {
+       --toolbox-border-bottom-color: none !important;
+   }
+   #+END_SRC
 
-  reducing the tabs height more
-  #+BEGIN_SRC css
-  :root #tabbrowser-tabs {
-   --tab-min-height: 25px !important;
-  }
-  #+END_SRC
+   reducing the tabs height more
+   #+BEGIN_SRC css
+   :root #tabbrowser-tabs {
+    --tab-min-height: 25px !important;
+   }
+   #+END_SRC
 
-  removing the useless padding and marging between elements of the urlbar etc..
-  #+BEGIN_SRC css
-  #nav-bar,#PanelUI-menu-button{
-      padding: 0px !important;
-      margin:  0px !important;
-      height: 28px !important;
-  }
-  #+END_SRC
+   removing the useless padding and marging between elements of the urlbar etc..
+   #+BEGIN_SRC css
+   #nav-bar,#PanelUI-menu-button{
+       padding: 0px !important;
+       margin:  0px !important;
+       height: 28px !important;
+   }
+   #+END_SRC
 
-  make the tabs hidden when there is only one tab open
-  #+BEGIN_SRC css
-  /* Styles:13 ends here */
-  /* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/hide_tabs_with_one_tab.css made available under Mozilla Public License v. 2.0
-  See the above repository for updates as well as full license text. */
+   make the tabs hidden when there is only one tab open
+   #+BEGIN_SRC css
+   /* Styles:13 ends here */
+   /* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/hide_tabs_with_one_tab.css made available under Mozilla Public License v. 2.0
+   See the above repository for updates as well as full license text. */
 
-  /* Makes tabs toolbar items zero-height initially and sets enlarge them to fill up space equal to tab-min-height set on tabs */
-  /* Firefox 65+ only */
+   /* Makes tabs toolbar items zero-height initially and sets enlarge them to fill up space equal to tab-min-height set on tabs */
+   /* Firefox 65+ only */
 
-  :root[sizemode="normal"] #nav-bar{ --uc-window-drag-space-width: 20px }
+   :root[sizemode="normal"] #nav-bar{ --uc-window-drag-space-width: 20px }
 
-  #titlebar{ -moz-appearance: none !important; }
-  #TabsToolbar{ min-height: 0px !important }
+   #titlebar{ -moz-appearance: none !important; }
+   #TabsToolbar{ min-height: 0px !important }
 
-  #tabbrowser-tabs, #tabbrowser-tabs > .tabbrowser-arrowscrollbox, #tabbrowser-arrowscrollbox{ min-height: 0 !important; }
+   #tabbrowser-tabs, #tabbrowser-tabs > .tabbrowser-arrowscrollbox, #tabbrowser-arrowscrollbox{ min-height: 0 !important; }
 
-  :root:not([customizing]) #tabbrowser-tabs .tabs-newtab-button,
-  :root:not([customizing]) #tabs-newtab-button,
-  :root:not([customizing]) #TabsToolbar-customization-target > .toolbarbutton-1,
-  :root:not([customizing]) #TabsToolbar .titlebar-button{
-    -moz-appearance: none !important;
-    height: 0px;
-    padding-top: 0px !important;
-    padding-bottom: 0px !important;
-    -moz-box-align: stretch;
-    margin: 0 !important;
-  }
+   :root:not([customizing]) #tabbrowser-tabs .tabs-newtab-button,
+   :root:not([customizing]) #tabs-newtab-button,
+   :root:not([customizing]) #TabsToolbar-customization-target > .toolbarbutton-1,
+   :root:not([customizing]) #TabsToolbar .titlebar-button{
+     -moz-appearance: none !important;
+     height: 0px;
+     padding-top: 0px !important;
+     padding-bottom: 0px !important;
+     -moz-box-align: stretch;
+     margin: 0 !important;
+   }
 
-  #tabbrowser-tabs .tabbrowser-tab{ height: var(--tab-min-height) }
+   #tabbrowser-tabs .tabbrowser-tab{ height: var(--tab-min-height) }
 
-  #tabbrowser-tabs .tabbrowser-tab[first-visible-tab="true"][last-visible-tab="true"]{
-    visibility: collapse !important;
-  }
+   #tabbrowser-tabs .tabbrowser-tab[first-visible-tab="true"][last-visible-tab="true"]{
+     visibility: collapse !important;
+   }
 
-  /* Button re-styling */
-  #tabs-newtab-button:hover,
-  #tabbrowser-tabs .tabs-newtab-button:hover{ background-color: var(--toolbarbutton-hover-background) }
+   /* Button re-styling */
+   #tabs-newtab-button:hover,
+   #tabbrowser-tabs .tabs-newtab-button:hover{ background-color: var(--toolbarbutton-hover-background) }
 
-  #tabs-newtab-button > .toolbarbutton-icon,
-  #tabbrowser-tabs .tabs-newtab-button > .toolbarbutton-icon{
-    padding: 0 !important;
-    transform: scale(0.6);
-    background-color: transparent !important;
-  }
-  /* Extra top padding  in maximized window */
-  @media (-moz-os-version: windows-win10){
-    :root[sizemode="maximized"] #navigator-toolbox{ padding-top:7px !important; }
-  }
-  /* Fix window controls not being clickable */
-  :root[tabsintitlebar] #toolbar-menubar[autohide="true"][inactive]{
-    transition: height 0ms steps(1) 80ms;
-  }
-  #nav-bar{
-    border-inline: var(--uc-window-drag-space-width) solid var(--toolbar-bgcolor);
-  }
+   #tabs-newtab-button > .toolbarbutton-icon,
+   #tabbrowser-tabs .tabs-newtab-button > .toolbarbutton-icon{
+     padding: 0 !important;
+     transform: scale(0.6);
+     background-color: transparent !important;
+   }
+   /* Extra top padding  in maximized window */
+   @media (-moz-os-version: windows-win10){
+     :root[sizemode="maximized"] #navigator-toolbox{ padding-top:7px !important; }
+   }
+   /* Fix window controls not being clickable */
+   :root[tabsintitlebar] #toolbar-menubar[autohide="true"][inactive]{
+     transition: height 0ms steps(1) 80ms;
+   }
+   #nav-bar{
+     border-inline: var(--uc-window-drag-space-width) solid var(--toolbar-bgcolor);
+   }
 
-  #+END_SRC
+   #+END_SRC
 
-  Make urlbar appear more compact
-  #+BEGIN_SRC css
-  /* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/compact_urlbar_megabar.css made available under Mozilla Public License v. 2.0
-  See the above repository for updates as well as full license text. */
-  #urlbar[breakout]{
-    margin-inline-start: 0px !important;
-    width: 100% !important;
-    left: 0 !important;
-    top: calc((var(--urlbar-toolbar-height) - var(--urlbar-height)) / 2) !important;
-  }
-  #urlbar[breakout]:not([open]){ bottom: calc((var(--urlbar-toolbar-height) - var(--urlbar-height)) / 2) !important; }
-  .urlbarView{ margin-inline: 0 !important; width: auto !important; }
-  .urlbarView-row{ padding: 0 2px !important; }
-  .urlbarView-row-inner{ padding-inline-start: 4px !important; }
-  #urlbar-background{ animation: none !important; }
-  #urlbar-input-container{ padding: 0 !important; height: 100% !important; }
-  #identity-box{ padding-block: var(--urlbar-icon-padding) }
-  .urlbarView > .search-one-offs:not([hidden]){ padding-block: 0px !important; }
-  #+END_SRC
+   Make urlbar appear more compact
+   #+BEGIN_SRC css
+   /* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/compact_urlbar_megabar.css made available under Mozilla Public License v. 2.0
+   See the above repository for updates as well as full license text. */
+   #urlbar[breakout]{
+     margin-inline-start: 0px !important;
+     width: 100% !important;
+     left: 0 !important;
+     top: calc((var(--urlbar-toolbar-height) - var(--urlbar-height)) / 2) !important;
+   }
+   #urlbar[breakout]:not([open]){ bottom: calc((var(--urlbar-toolbar-height) - var(--urlbar-height)) / 2) !important; }
+   .urlbarView{ margin-inline: 0 !important; width: auto !important; }
+   .urlbarView-row{ padding: 0 2px !important; }
+   .urlbarView-row-inner{ padding-inline-start: 4px !important; }
+   #urlbar-background{ animation: none !important; }
+   #urlbar-input-container{ padding: 0 !important; height: 100% !important; }
+   #identity-box{ padding-block: var(--urlbar-icon-padding) }
+   .urlbarView > .search-one-offs:not([hidden]){ padding-block: 0px !important; }
+   #+END_SRC
+** Web pages
+   :PROPERTIES:
+   :header-args: :tangle ~/.mozilla/firefox/default/chrome/userContent.css :comments both :mkdirp yes :noweb tangle
+   :END:
+   Change color of scroll bar:
+   #+BEGIN_SRC css
+   html,body{
+       scrollbar-color: <<base03>> <<base02>> !important;
+   }
+   #+END_SRC
