--- a/secrets.org
+++ b/secrets.org
@@ -2,28 +2,29 @@
 #+TITLE: Secrets
 #+OPTIONS: prop:t
 /Here are saved secrets which are used in configuration files./
-* =GPG= variables :crypt:
+* General :crypt:
   :PROPERTIES:
   :header-args: :tangle no
   :END:
 -----BEGIN PGP MESSAGE-----
 
-hQIMAzw/GyStS24+ARAAjb8hnaxcZO2vIPlcxyy1aVMcUFnZBcSHwoJUuE6axj9O
-9lviTvqyhlUOq105qlyxd3QyG3uMKnW1B582t+/MEuYjcUDxBSlca8lHnZYTGqcQ
-BzrrNsnOKCA9FraqJQguWmC/pdQ+j2O1AsNWF69uh1njnkDry809LXdH3e8mGUTU
-xnj8LEqHwnxdmGEbk/EXAbzSShjD/9oe3hXp3lWtM848lAys3uwGBOpy3YLwL87y
-gI5+ffnz8BDJXREWeMtK/V+PVKGdSYn8l07fgfb0q6haHWYlygMjpeHboStB1xs2
-X9BwAL1mrzO4HEwPIUpH5othy+jFL1U+XPJKxUaE83nVoyR+tyiM/ZYKIzK7x+7H
-3c9wkRhnUr05yCe0NrAGZiWPP0rEAqKXQS/rtyZAxC1AHmK0rJh9L9v+QTziS1sk
-EZ2RuCCew3p4tyTKGSxfbi0Ho7H1xetGr7/PD7cphqVslhxYIx6ZAVl05R3e/r+b
-i5KPwqRMQpEvODwBSrcwGOjA3fNGvQ+QuBOpcmsvXawbWGSWQAHzdQrpBQz1aEEw
-5XhMIwglvmM18ZgiAvRNSUBS0hRCfpUho45jKpZUjf03KK+wFXMVA3pjbk6Gh1v+
-1eqcONV9mEa0k+WyMrJsgQoBTBqejf8psPnwD7iAaqDhGr7LnMhwc3c487C2vcPS
-tgHKz9d1h+qPfDacqTn0iTDChhgNfdCE1gjppE4wxn8xV7DpGTLQK8BLY64h8/vC
-n3hFofPE+vTZuRw4/ebg41oNnkwuuTHf9Jc4a/+KiMrLkY0c0De8swVb0p7vBh8j
-5XCtyFFilzjKVVRmLqEIkdtp5YFzqQtliltzvWtVTrlGpPL0a2DEWBKQD5K0hEBh
-jr/gLhpwpq5uziiD0nv4bLOMPhMm/qW5kZ6K79tB5/LUzGc46Na7
-=K1cl
+hQIMAzw/GyStS24+AQ/9H4oSlvU8Wind6lfyXkVMk4Y7vTD66638EHsgOxaw12y5
+6M6sfUD7LP/Q0aIYyjDUtiwefSCfKKR9lpWf1BlJuRqoWNgKSiOtn0SoX0QO98ms
+8zKVgvwN/oerK8KfSJn1M2U/8uZSgiBjYuQu1GSWVgzSCoX6oFiVbdHheQGxjXMW
+EhvKkiOdKPhxYmLl4VUEkFdQ+CtuEFcacPZja0lFyxbkhBKJphgMEmIP0I71AJf1
+YHsm26x8/zzsyrRQ6W4ReS7gPNeVR6bhp36EoRbsbDLg8IDBQYTgup/4GfkGTxMz
+qRU25UkXU/yv/GKqzKywI/i9Gj013vrMjcF5DCRjUoiHEKwaPPW9d1f1YbaD+p2s
+l7jcq/i4H4d1O8dqFXFVw4mb3ZwYyo0WJB7nNYaOzE14494asYJXSvPp4kWRsY4y
+DgiFsqHcfs9f/dMUvoU9jgHSnjQkiw2a6hMjJ8xhRRUFIZ+lSavFNm06UbO94P68
+S/WVgbLZpGX4R1eD9//zV5RMKN69Ag7+pPorsHwubCKJKB1o2BPDgN5MpYXX8WbJ
+E5ukOA7O0je/a2A2h0e+n8WvBeS6UyZFfo0JKivbLoakdsXMIV9Lfr5hvtcN1dru
+nOCkx0tWWxX8taPjr6amIHggHX4q9g9nqZQcmLHv5jmGuhud+yKZ2yGR4M8kIYbS
+wB8BslKChOxEOC9R2iY4kBYuKwnn7ufdPMBw3cpmYZbLfD+ZEtcyKCWFG5KIIHFu
+P26dJS94GOK2GXOt71gjC5ejFDrL/f4kVFgokxescRFjicLCDMmKztx1KCsyT1IH
+wE4MZ0HBm6KjD8PXczkN1ZjccUhi1aDowkXOG7BEVZejMoT9eru0NcAjbMkiADlW
+ivySykCsV6JeX70/CeHC1sT5mbK0xaEcH/vlkmyjsPNPtrJyr1InwDSW/RzrnGo2
+Klyogs4Dh3PmYiX+NfW6abhaSR5eor5JqDROENpGlJuh
+=9C2p
 -----END PGP MESSAGE-----
 * Credentials :crypt:
   :PROPERTIES:
