Use delta as a Git difftool

--- a/secrets.org
+++ b/secrets.org
@@ -8,24 +8,25 @@
   :END:
 -----BEGIN PGP MESSAGE-----
 
-hQIMAzw/GyStS24+AQ//ebxoJmZRV2gWPB86NX2tdWjcKpjYu/mwMZvy85gyjYO8
-FLYalkbiInujqa6MTcVIF1PU0mz2e8lCSpp0gqgtU+7Zg3/XQqEM/1EhssWhuQFU
-Kdiq34tya2f0ZeGi9PI0FbPV9x80kdk0tip14kvKQEfj7xf3jzh9H+xU6kDoEkrd
-jnTTX01Tcm/Ff2vt+denZUn2V5h0KpPW4ufEhsfPsXsxNJT+6f6xOf7SyOY/qskT
-shbikskP3VV5dRsrkImn90jzArlI8ZqJQe+6nQiizr7jdHgPYbCXGULcS92Pyjnh
-EnKT6p8EaQxMA5mgskWULBl/ECgpgWguuI54kr44kT+fZaKBN8YSd9mSqn3vHizy
-xNBMYQQLUNTbUasH+Z0c++gZ8i1FgV9W60STYOvQNRMWVbnadsd3nfECV7fulGFQ
-ac1T5y0kXslI9TMEPXsX2idgoAg0H/7TdEzpXM4OWjJkHhCDJRUIhxPjIvocbeOf
-I8IXip4Z5JdAWCkWtbpVnF7VKqnLSPZpWrBS+EormRCbvoxfDKQDn2RKrifxt+/V
-AiC2Q76vCRB2N66fyLQaZUlpjuAsMZYsj04ZJL1dfeZjXEx2VROibIy87quIDuub
-V4N/0WYAYgnAur4dW5UvlOaRRJSdbrhYnAhWIV08R58IJhkfYdEMQjzULvxwsfrS
-wDEBQjnR8S+HnqFWC3xjCMisD9hJ5pa0pJY7rwdkyGleZzc/7M+PvoQcRKCXQmFU
-Vu6uQsFZndQz7J9TGXnBfiy9x33Z4ijRG2ZSamnUhhjo5D1VztEc3LZO7M7g/JXa
-N+uAL+vkU7BXl5mXfYc82UspXC6AaIZZKG2SX/vrmmf1dCTfo6ZEhkkwsifmzKF4
-AJjtdrAuJC4hv4quvMnulpN1o/1LJY9LW+OLIoyVtRVG5AFz33c1A8kQJTvpqcn6
-7+4q7PJGne5Zfe5gDmhYobD6Cy0uWOeTy94oahzvoUVLqmts3BEZWBxKChO1R0JI
-xRev
-=7gWn
+hQIMAzw/GyStS24+AQ//cu+69MfTa+ceAmqdYpyqy7QGX826f9nsX8g+80ovjLXB
+1zw5c1tq2TGoQzqL0upkhfcQ5Z+oAuphB9xRp76H0ZBEwLysILTGjDj2UJ3fLvwp
+GEYhyc+MqC+jMsSUZhkZFc2IjiXWLlHJbClJPoxel6Q8npH+Z8Pra9NE5HWScc8U
+FboaPNzwPcG7PoFqrIOB52npZfS0qJlYdMLS75c+c7waccMQ5gIA7AXA47/SPurM
+SvCLYKJei8SjkHjEOsgsDpjLbBbCgT7AsEFFFlOgA6hYVisZqamH+soNGvSU6SJz
+ftkdyj5fV5qNaniXskv8r603hA9okttB7/Cchf5KdQejpajjdnvAfdygZ5pN2HPG
+kv11gHveGe5P/k2g1F4JpjSW6ImouW5sSosdl6oYB6U/vmzXrV+duFO9VRrrRsMH
+U398nZbmSTxaw1ab5nocNQPDa5P7nBA+FrinjSl96jL2R87MNP784NgRTfU/3Dxm
+lJy4F5HX08DhiMoHa1t3OQFlqgbXceMry/DtxUIZMussnpRPaJmjSHwsOYG/EoAS
+jtbo8r8+gc1TNE6cbPLZnR+27Nzf5++AoMnBuBJM3mQb/P/JYcD92PorsDk3p16D
+pHBv3zesVSaItGSIw8PLXdnIHI08a+9UiHufNBiCpgQVSS4Zkqap/lSbMrRfk4DS
+wHQBucNXupzLl0S7ZyIdjopfoAPur8b/ocaK0YTQDXBoyYKOF+zRMAH+C9erThEr
+QYF7Oiw0b6PqWXha1l7BSYl318EqqpmL1/uyHobfkPeU78bdTfNedm1ukls6+ZnI
+VH65hjc8D67Jfksqj7FqKnLCVnn7kdUB/IVSs6BkX5mHI5IZYNSXo7rwTK00z1Sg
+zmTC1RV+APIz6elIcaSh1wyxjI8d+tCsrKtVFBhkPwoLKVjbuna1FpMyvrX2niUr
+D7jtBwIjxj9OfEkeMuPKgdk8vU4+QT9+78Lb1SDzuL4c3UI55EYKGS7eb/jDxdJ/
+9NaWEnvmmaGsN5cLxrppKa1F7kZZnz5UpIPpLXPfj9lTvjSdImAwhP/PmySu3txX
+whxrIGHik6qqWaxyaGnUBayJOrF8Fg==
+=rZ2I
 -----END PGP MESSAGE-----
 * Credentials :crypt:
   :PROPERTIES:
@@ -33,22 +34,20 @@ xRev
   :END:
 -----BEGIN PGP MESSAGE-----
 
-hQIMAzw/GyStS24+AQ//Q87o5hlP484NYMB0IzRgyQYW3VgmwzfxUxBOC4kqlVqO
-D22QEE/kBYwLOc948JYOnEJ448H76hWaXfyx2He8i8aO4pUHWSdj+bNjSo4Dbs7/
-12+hYfgXv+lIcJ34tiTfuQK15/Qwb71GralAgQPw7HMlv7YY3kXKVyWrU741AFOs
-KR2va9GOrNmZ2gArfmKKWpRK+q5oLdk/GqcEJ4BqV/4nTyhwXd9ls6913zsQ/CyQ
-umGHKEGMZocL9v0PhTat8mZIM5pYIGd5oU99CwkRPTwRsnD02p5KXcZRTYTWt+GC
-jsXm8FcB+s95MVfSswGXN61tDpP8Y97Pl6W7dX+tMljs6DCpyguFN2QlgyfCOdxT
-FUlzx9uWscdf+9tU7sVshQzlkpYvjn8vaf2GUZhzkDIjKyxf+Jc+ed0wwXi77dXy
-7Am0rjqAHcT3TrqEM5uAP5McKA9ezvXv1NSgRAlNl9gKxdX9xljE4rQrQdsZ7tK9
-OWOOLta/kRcTNoKlqsqjtteA1CUabP639Vibxz8utbATJMftQ5nTVHhlejRNmSoA
-xyQ4lEim0fgtcZiAG80YfXO8XczF41EIRaHCREmY4Bejb0S1zJR+cOW3eduj8ZHy
-Iu9hTSN5/c4jgl3t1yjuLYmY465mN9I+Ek3+cf/voVnWpp0HoIYfFNeBrcH1QsnS
-wDQBxtaaeBqBbnuN+X7fMAxheLjRkpQ69B8xej0O00vAyYUwJ1NLTMhVVShRi/BB
-ioT+eOpZCVb2u+tTnclfI2p5Vjrnc0HxipDDcAp0sOhPWoXt+yKrcMX5OiZ9aQSj
-4hSP4IK07y6tSirR50bnsjGmZkdrp3Nx20IiVF2RtV/dU+bUq8P3RWTPXbFUxgac
-uRaiY08e2Iq6nj70mDTC/jeprwhdq73OQx598gQl9wGHDezM+A57grWlgqstv0fJ
-kWHMOeeIWgKFttzCYkgBvN1NRvhvOTOMmOuCWku5gGQwJrpCwDqbSNwh0xFKi3Sz
-w7w6Pjkn
-=Cimt
+hQIMAzw/GyStS24+AQ//VdW6+Xs7Xp0OxHnS9wO3i36U+/rhjIL4H08up7NnvNDM
+lBu1u62oVF2zm7CAAVaKS0UQ0RZlVqpfoH2asRgHNl1YNBEaEbXIdvRCNqnVVLe4
+O9Cxfbc03+qZmHF9xz1k2fuRiYjxK9cHR88RJyaYHi9ggLQ3oAfzwNuFDva1xV23
+3X6QDcSzasl5ANNwVhoFyxWiHtLgeHjdQz0rpwLmdVpYN3glMg+xWLDLd+rVIQAL
+W24U1ZsWhPzjBaCTHVJ/Uhs/ceVKLOZF5YFTsQ3b5KNZ+n/e+NkgQL4TJuDnaEZY
+fFwqgdR/sQrLAvmA23oQD83YqNhMlB/h5MEWcy5d1/UZYmOACrOX2AMpBsdyjlWT
+lGtarL1EFpuZJW/YherLsAMmzTbBkZt6Cc2q6caKncBCUixc37UgtXPuGy7LdyuS
+Fir82bG/4Ydf6/3emQZdz+f156MggkbnrUVMmwf69t1WVts5NDFQsEdc7Semv/8o
+K30FcfNkChy25AuCcH7/a/uhd8e8nnlu3SCdALwZQ1Gdr/BivkLksj1chpsFina3
+QS8PGbmTVXHAf/W1CNEkUv+rTS3rsBANfwFCYZiCOIlipod2R55NMr8QqhV6LDru
+38LcUClDJ/ZSHXFuKXgkV9hEp+5kKhoYkTAw/SWZ0pKZr3iUQ1Xu5LLEf32vAVjS
+twFbRgd4IXbY5cNGq9uNg4Kga1/FAbcplDaiMb+CL1mg7tPJVYP9iq0YGSQ2Uf7R
+hEZEH/ya8gk7SwhVI8jkXCabM1uev7iYQtfwRbF+Q7uwKZFDXvjPGDXadRYne44n
+gmqFu84wBZOSW6mAdU6vd6IWCcF7lngQ3wRezHXjzKrCE8YsnUv/4E8SDrpsbBll
+uUW9dM6dnvufs9/TZU90eJ71/TMRfMwHM1hvNqmVoCS7680+L+uDgg==
+=vuJR
 -----END PGP MESSAGE-----
